# xmlu

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/xmlu/: __init__.py  convert_to_json.py  convert_to_pydantic.py  main.py  utils.py
tests/: test_generator.py  test_json.py  test_string_utils.py
