[project]
name = "xmlu"
version = "0.1.0"
description = "XML Utility tools with Pydantic and Rich"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["lxml>=6.0.2", "pydantic>=2.12.3", "rich>=14.2.0"]
authors = [{ name = "Michiel Meire", email = "michiel.meire1@gmail.com" }]
license = { text = "MIT" }
keywords = ["xml", "xml-utility", "pydantic", "rich", "parsing", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]

[project.urls]
Homepage = "https://github.com/MichielMe/xmlu"
Repository = "https://github.com/MichielMe/xmlu.git"

[project.scripts]
xmlu = "xmlu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xmlu"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
